# micromanager12extras

./: CMakeLists.txt  configure.in
Bleach/: CMakeLists.txt
DeviceAdapters/: CMakeLists.txt  Makefile.am  configure.in
DeviceAdapters/AOTF/: AOTF.cpp  AOTF.h  AOTF.vcproj  CMakeLists.txt
DeviceAdapters/ASIFW1000/: CMakeLists.txt
DeviceAdapters/ASIStage/: ASIStage.cpp  ASIStage.h  CMakeLists.txt
DeviceAdapters/Andor/: Andor.cpp  Andor.h  CMakeLists.txt
DeviceAdapters/Conix/: CMakeLists.txt
DeviceAdapters/DAZStage/: CMakeLists.txt  DAZStage.cpp
DeviceAdapters/DTOpenLayer/: CMakeLists.txt  DTOpenLayer.cpp  DTOpenLayer.h  DTOpenLayer.vcproj
DeviceAdapters/DemoCamera/: CMakeLists.txt  DemoCamera.cpp  DemoCamera.h
DeviceAdapters/DemoStreamingCamera/: CMakeLists.txt  DemoStreamingCamera.cpp
DeviceAdapters/Hamamatsu/: CMakeLists.txt  Hamamatsu.cpp  Hamamatsu.h
DeviceAdapters/K8055/: CMakeLists.txt
DeviceAdapters/K8061/: CMakeLists.txt
DeviceAdapters/LabJack/: LabJack.cpp  LabJack.h  Makefile.am  u3.c  u3.h
DeviceAdapters/Ludl/: CMakeLists.txt  Ludl.cpp  Ludl.h  Makefile.am
DeviceAdapters/LudlLow/: CMakeLists.txt  Ludl.cpp
DeviceAdapters/Nikon/: CMakeLists.txt  Nikon.cpp  Nikon.h
DeviceAdapters/NikonTE2000/: CMakeLists.txt  NikonTE2000.cpp  NikonTE2000.h  TEHub.cpp  TEHub.h
DeviceAdapters/PI/: CMakeLists.txt  PI.cpp
DeviceAdapters/PI_GCS/: CMakeLists.txt
DeviceAdapters/PVCAM/: CMakeLists.txt  Cascade.cpp  PVCAM.cpp  PVCAM.h  PVCAMUniversal.cpp  PVCAMUtils.cpp
DeviceAdapters/ParallelPort/: CMakeLists.txt  ParallelPort.cpp  ParallelPort.h
DeviceAdapters/Pecon/: CMakeLists.txt
DeviceAdapters/Prior/: CMakeLists.txt  Prior.cpp  prior.h
DeviceAdapters/QCam/: CMakeLists.txt  QICamera.cpp  QICamera.h
DeviceAdapters/Sensicam/: CMakeLists.txt  Sensicam.cpp  Sensicam.h
DeviceAdapters/SerialManager/: CMakeLists.txt  SerialManager.cpp  SerialManager.h
DeviceAdapters/SerialManagerUNIX/: CMakeLists.txt  SerialManager.cpp  SerialManager.h
DeviceAdapters/Skeleton/: CMakeLists.txt
DeviceAdapters/SpectralLMM5/: CMakeLists.txt
DeviceAdapters/StanfordPhotonics/: CMakeLists.txt  StanfordPhotonics.cpp  StanfordPhotonics.h
DeviceAdapters/SutterLambda/: CMakeLists.txt  SutterLambda.cpp  SutterLambda.h
DeviceAdapters/USBManager/: CMakeLists.txt  USBManager.cpp
DeviceAdapters/Vincent/: CMakeLists.txt
DeviceAdapters/Yokogawa/: CMakeLists.txt
DeviceAdapters/Yokogawa/CSUX/: CSUX.vcproj
DeviceAdapters/ZeissCAN/: CMakeLists.txt  ZeissCAN.cpp  ZeissCAN.h
DeviceAdapters/ZeissCAN29/: CMakeLists.txt  ZeissCAN29.cpp  ZeissCAN29.h  ZeissCAN29.vcproj
DeviceAdapters/ZeissMTB/: ZeisMTB.cpp  ZeissMTB.h
DeviceAdapters/dc1394/: CMakeLists.txt  dc1394.cpp  dc1394.h
Install/: MM-ImageJ-Install.iss  MMDeviceKit.iss
MMCore/: CMakeLists.txt  ConfigGroup.h  Configuration.cpp  Configuration.h  CoreCallback.cpp  CoreCallback.h  CoreProperty.cpp  CoreProperty.h  CoreUtils.h  Error.h  ErrorCodes.h  MMCore.cpp  MMCore.h  PluginManager.cpp  PluginManager.h
MMCoreJ_wrap/: MMCoreJ.i  MMCoreJ_wrap.vcproj  MMCoreJ_wrap_1.2.sln
MMDevice/: CMakeLists.txt  DeviceBase.h  DeviceUtils.cpp  DeviceUtils.h  ImgBuffer.h  MMDevice.h  MMDeviceConstants.h  ModuleInterface.cpp  ModuleInterface.h  Property.cpp  Property.h
ModuleTest/: CMakeLists.txt  Makefile.am
Test_AcquisitionData/: Test_AcquisitionDataCreate.java  Test_AcquisitionDataInMem.java
Test_MMCore/: CMakeLists.txt  Test_MMCore.cpp  Test_MMCore_Mac.cpp
Test_Serial/: CMakeLists.txt
Tracking/: .classpath  build.xml
Tracking/src/: TrackerControlDlg.java
autofocus/: CMakeLists.txt
doc/: MMDeviceKit.doc
mmstudio/src/org/micromanager/: AcqControlDlg.java  ConfigGroupPad.java  GroupEditor.java  MMAboutDlg.java  MMAcquisitionEngineMT.java  MMIntroDlg.java  MMOptions.java  MMStudioMainFrame.java  OptionsDlg.java  PlaybackPanel.java  PositionListDlg.java  PresetEditor.java  PropertyEditor.java  RegistrationDlg.java
mmstudio/src/org/micromanager/conf/: AddDeviceDlg.java  ComPortsPage.java  ConfigGroup.java  ConfigPreset.java  Configurator.java  ConfiguratorDlg.java  DelayPage.java  Device.java  DevicesPage.java  EditPropertiesPage.java  FinishPage.java  IntroPage.java  Label.java  LabelsPage.java  MMConfigFileException.java  MicroscopeModel.java  PagePanel.java  PresetsPage.java  Property.java  PropertyCellEditor.java  PropertyCellRenderer.java  PropertyTableModel.java  RolesPage.java  Setting.java  SynchroPage.java
mmstudio/src/org/micromanager/graph/: ContrastPanel.java  GraphData.java  GraphFrame.java  GraphPanel.java  HistogramFrame.java  HistogramPanel.java
mmstudio/src/org/micromanager/metadata/: AcquisitionData.java  DisplaySettings.java  ImageKey.java  ImagePropertyKeys.java  MetadataDlg.java  SummaryKeys.java
mmstudio/src/org/micromanager/navigation/: MultiStagePosition.java  PositionList.java  StagePosition.java
mmstudio/src/org/micromanager/script/: MMScriptFrame.java  MMScriptView.java
mmstudio/src/org/micromanager/utils/: CfgFileFilter.java  ChannelSpec.java  ColorEditor.java  ColorRenderer.java  ContrastSettings.java  LUTDialog.java  LargeMessageDlg.java  MMDialog.java  MMException.java  MMFrame.java  MMImageWindow.java  ProgressBar.java  ScriptFileFilter.java  ShowFlags.java  TextUtils.java  WaitDialog.java
